--- a/html/about.html
+++ b/html/about.html
@@ -3,11 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>About</title>
 </head>
 <body>
     <header>
-        <!-- Menu -->
+        <nav>
+            <ul>
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="./about.html">About</a></li>
+                <li><a href="#">Review</a></li>
+                <li><a href="#">Reach me</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <h2>About</h2>
+    </main>
+    <footer>
+        <p>Copyright &copy;2023</p>
+    </footer>
     </header>
     <main>
         <h2>About</h2>
@@ -16,5 +30,6 @@
         <p>&copy;2023</p>
     </footer>
     <script src="./script/code.js"></script>
+
 </body>
 </html>
