few changes made

--- a/html/about.html
+++ b/html/about.html
@@ -16,19 +16,19 @@
             </ul>
         </nav>
     </header>
-    <main>
-        <h2>About</h2>
-    </main>
-    <footer>
-        <p>Copyright &copy;2023</p>
-    </footer>
+        <main>
+            <h2>About</h2>
+        </main>
+        <footer>
+            <p>Copyright &copy;2023</p>
+        </footer>
     </header>
-    <main>
+    <!-- <main>
         <h2>About</h2>
     </main>
     <footer>
         <p>&copy;2023</p>
-    </footer>
+    </footer> -->
     <script src="./script/code.js"></script>
 
 </body>
